# raytracer

./: CMakeLists.txt  LICENSE.md  README.md  box.xml  config.example.xml  config.xml  config.xml.example  mirrors.xml
deliverables/: checkpoint2config.xml  checkpoint3config.xml  out.ppm  out1.ppm
src/: .kernel.cc.swp  AABB.cc  AABB.hpp  brdf.hpp  camera.hpp  color.hpp  hit_result.hpp  kernel.cc  kernel.hpp  kernel_config.cc  light.hpp  main.cc  material.hpp  photon_map.cc  photon_map.hpp  ray.hpp  shape.hpp  spatial_index.hpp  tracer.hpp  tracers.cc  tracers.hpp  types.hpp
src/brdf/: brdf.hpp
src/camera/: camera.hpp  pinhole.cc  pinhole.hpp
src/cameras/: pinhole.cc  pinhole.hpp
src/light/: ambient.cc  ambient.hpp  directional.cc  directional.hpp  light.hpp  point.cc  point.hpp  spherical.hpp  triangular.cc  triangular.hpp
src/lights/: ambient.cc  ambient.hpp  directional.cc  directional.hpp
src/material/: lambertian.hpp  light.hpp  material.hpp  matte.cc  matte.hpp  phong.cc  phong.hpp  photon_mapped.cc  photon_mapped.hpp
src/materials/: matte.cc  matte.hpp
src/sampler/: checkerboard.cc  checkerboard.hpp  circles.cc  circles.hpp  png_texture.cc  png_texture.hpp  rainbow.cc  rainbow.hpp  sampler.hpp  solid.hpp
src/shape/: obj_mesh.cc  obj_mesh.hpp  plane.cc  plane.hpp  rect.cc  rect.hpp  shape.hpp  sphere.cc  sphere.hpp  triangle.cc  triangle.hpp
src/shapes/: plane.cc  plane.hpp  rect.cc  rect.hpp  sphere.cc  sphere.hpp
src/spatial/: kdtree.cc  kdtree.hpp  naive.cc  naive.hpp  spatial_index.hpp
src/tone_operators/: gamma_correction_operator.cc  (+10 more)
(+40 files in other folders)
